Create renderer script

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,6 @@
 	<head><title>Bassbox GUI</title></head>
 	<body>
 		<h1>Bassbox GUI</h1>
+		<script src="./renderer.js"></script>
 	</body>
 </html>
