Add Cytoscape.js as a graph library

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Bassbox GUI</title></head>
+	<head>
+		<title>Bassbox GUI</title>
+		<link rel="stylesheet" href="css/styles.css" />
+	</head>
 	<body>
-		<h1>Bassbox GUI</h1>
-		<script src="./renderer.js"></script>
+		<div id="graphview"></div>
+		<script src="js/renderer.js"></script>
 	</body>
 </html>
