Implement basic JSON-RPC client

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<div id="graphview"></div>
-		<script src="js/renderer.js"></script>
+		<script>require("./js/renderer");</script>
 	</body>
 </html>
